
Changelog Bypass Paywalls Clean - Chrome

Post-release
Add Auto-motor-und-sport.de
Add Medienholding Süd (opt-in to custom sites for unlisted)
Add Money.it
Add TorStar local
Fix Ad Age (js)
Fix Australian Community Media (css & identify sites)
Fix Medium (identify member-only)
Fix Puck.news (cached articles only)
Fix Star Tribune (images/comments)
Fix The Toronto Star (js)
Fix Verlagsgruppe Rhein Main (json & identify sites)
Maintenance request host permission (disabled for mobile)

* v3.2.5.0 (2023-07-16)
Add El Tribuno (ar)
Add Sabado.pt
Remove TorStar local (fix obsolete)
Remove VmnMedia.nl Group (fix obsolete)
Fix Australia News Corp (amp-fix)
Fix Bloomberg (json)
Fix Cmjornal.pt & Record.pt (amp)
Fix Grupo Abril (js-inline)
Fix (custom) Medium (link to Google webcache)
Fix Telegraaf.nl (columns)
Fix WSJ (mobile)

* v3.2.4.0 (2023-07-09)
Add Delish, Elle Decor, Harper's Bazaar & Oprah Daily (Hearst)
Add NWT Media.se (opt-in to custom sites)
Add Stuttgarter-zeitung.de
Remove Aftonbladet.se (fix obsolete)
Remove Dn.se (fix obsolete)
Remove Golem.de (fix obsolete)
Remove LeFigaro.fr (fix obsolete)
Remove Limburger.nl (fix obsolete)
Remove Quillette (fix obsolete)
Remove Tagesspiegel.de (fix obsolete)
Fix BusinessPost.ie (json)
Fix Crusoe.uol.com.br (js)
Fix Hearst Communications magazines (js)
Fix Mediahuis Noord (regional)
Fix Midi-Olympique.fr (new domain Rugbyrama.fr)

* v3.2.3.0 (2023-07-02)
Add Groupe ESH Medias (ch)
Add Hln.be (link to archive.is)
Add MacroBusiness.com.au (ld_json_nuxt)
Add Puck.news
Add Zeit.de (link to archive.is)
Remove AerzteBlatt.de (fix obsolete)
Remove LePoint.fr (fix obsolete)
Remove Stratfor (fix obsolete)
Remove The Times Literary Supplement (fix obsolete)
Remove Time Magazine (no paywall)
Fix Beobachter.ch & Handelszeitung.ch
Fix Foreign Policy (Insider)
Fix Telegraaf.nl (images)

* v3.2.2.0 (2023-06-25)
Add Follow the Money (Ftm.eu)
Add Groupe SynerJ Media (opt-in to custom sites)
Add Hindu Tamil Thisai (India)