@@ -37,5 +37,5 @@
     "webRequestBlocking",
     "*://*/*"
   ],
-  "version": "3.2.5.8"
+  "version": "3.2.5.9"
 }
