@@ -8,12 +8,14 @@ Add Money.it
 Add TorStar local
 Fix Ad Age (js)
 Fix Australian Community Media (css & identify sites)
+Fix Euromoney (ld_google_webcache)
 Fix Medium (identify member-only)
 Fix Puck.news (cached articles only)
 Fix Star Tribune (images/comments)
 Fix The Toronto Star (js)
 Fix Verlagsgruppe Rhein Main (json & identify sites)
 Maintenance request host permission (disabled for mobile)
+Update custom sites (fix ld_google_webcache)
 
 * v3.2.5.0 (2023-07-16)
 Add El Tribuno (ar)
